fix: atom icon gap

--- a/packages/void-ui/src/components/base/variables.scss
+++ b/packages/void-ui/src/components/base/variables.scss
@@ -243,6 +243,8 @@ $gap-map: (
 
 $gap-base: gap('medium') !default;
 
+$gap-icon-multiplier: 0.618 !default; 
+
 // border
 
 $border-base: 1 !default;
